Bug 687209 - assertion failure when open postscript file
Summary: assertion failure when open postscript file
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 0.00
Hardware: PC Windows NT
: P2 major
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-12-16 09:42 UTC by Yue Luo
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
example (127.03 KB, application/postscript)
2003-12-25 02:49 UTC, Peter Mueller
Details
Another file that give the same error (44.48 KB, application/postscript)
2004-04-22 09:56 UTC, Kevin Teuscher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yue Luo 2003-12-16 09:42:05 UTC
For Ghostscript 8.12
I got a document from SPARC.  It is downloadable from
http://www.sparc.com/standards/SCD.2.4.1.IS.ps.Z
When I try to open it, I got the following error

************************
Assertion failed!
Program: C:\gs\Ghostgum\gsview\gsview32.exe
File .\src\gxccman.c
Line: 574

Expression: cc->pair==pair

For information on how your program can cause an assertion failure, see the 
Visual C++ documentation on asserts.
********************************

Version 8.00 works fine.
Comment 1 Alex Cherepanov 2003-12-17 04:49:28 UTC
Probably, this is a duplicate of the bug 687116 fixed earlier.
I can not duplicate the problem in any recent version of Ghostscript
(8.11, 8.12. 8.13) on Windows or GNU/Linux.
Comment 2 Yue Luo 2003-12-17 06:31:23 UTC
I downloaded the 8.12 version from
ftp://mirror.cs.wisc.edu/pub/mirrors/ghost/AFPL/gs812/

This version has the bug on both Windows NT and Windows 2000.  Do you have a 
new fixed version downloadable?

Thanks.
Comment 3 Ray Johnston 2003-12-23 10:03:41 UTC
I tried this same 8.12 on Win 2000 and cannot make it fail from the command
line, but can make it fail when invoked from gsview 4.4

It works from the command line, so this is a temporary work around.
Comment 4 Peter Mueller 2003-12-25 02:49:33 UTC
Created attachment 413 [details]
example
Comment 5 Peter Mueller 2003-12-25 02:51:08 UTC
I'm testing 8.12, too. The error occurs with 

gs -sDEVICE=x11alpha xxx.ps

gs: ./src/gxccman.c:574: gx_add_cached_char: Assertion `cc->pair == pair' failed.
Comment 6 Igor Melichev 2003-12-31 02:32:05 UTC
The problem reproduces with 

    gs -r72 -dTextAlphaBits=4 -sDEVICE=ppmraw -sOutputFile=o.ppm 
CompareFiles\017-01.ps 

I've made a patch, now testing.
Comment 8 Kevin Teuscher 2004-04-22 09:56:29 UTC
Created attachment 633 [details]
Another file that give the same error

This file also causes the same error in 8.14

Should this be reopened?