Fix : The character oversampling condition was wrong.

DETAILS :

I can't guess why it was done depending on path. It looks wrong
and gives a different result when recomputed from type1execchar
when the path is reset.
Also penum->current_font to be used rather that pgs->font due to composite fonts.
Bug 687209 "assertion failure when open postscript file".

EXPECTED DIFFERENCES :

None with TextAlphaBits=1.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@4507 a1074d23-0009-0410-80fe-cf8c14f379e6